--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,72 @@
+apturl==0.5.2
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
-coreapi==2.3.3
-coreschema==0.0.4
+blinker==1.4
+catfish==1.4.13
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.7
+distro==1.4.0
+distro-info==0.23+ubuntu1.1
 Django==4.2.6
 django-cors-headers==4.2.0
-djangorestframework==3.14.0
-idna==3.4
-itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-pytz==2023.3.post1
-requests==2.31.0
+entrypoints==0.3
+filelock==3.12.4
+gunicorn==21.2.0
+httplib2==0.14.0
+idna==2.8
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lightdm-gtk-greeter-settings==1.2.2
+meld==3.20.2
+menulibre==2.2.1
+mugshot==0.4.2
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+onboard==1.4.1
+packaging==23.2
+pexpect==4.6.0
+Pillow==7.0.0
+platformdirs==3.11.0
+psutil==5.5.1
+pycairo==1.16.2
+pycups==1.9.73
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+python-apt==2.0.1+ubuntu0.20.4.1
+python-dateutil==2.7.3
+python-debian==0.1.36+ubuntu1.1
+pytz==2019.3
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+sgt-launcher==0.2.5
+simplejson==3.16.0
+six==1.14.0
 sqlparse==0.4.4
+systemd-python==234
 typing-extensions==4.8.0
-uritemplate==4.1.1
-urllib3==2.0.6
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+virtualenv==20.24.5
+wadllib==1.3.3
+xcffib==0.8.1
+xkit==0.0.0
