--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 apturl==0.5.2
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
-blinker==1.4
+blinker==1.7.0
 catfish==1.4.13
 certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
+click==8.1.7
 colorama==0.4.3
 command-not-found==0.3
 cryptography==2.8
@@ -19,15 +19,20 @@ Django==4.2.6
 django-cors-headers==4.2.0
 entrypoints==0.3
 filelock==3.12.4
+Flask==3.0.0
 gunicorn==21.2.0
 httplib2==0.14.0
 idna==2.8
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 keyring==18.0.1
 language-selector==0.1
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 lightdm-gtk-greeter-settings==1.2.2
+MarkupSafe==2.1.3
 meld==3.20.2
 menulibre==2.2.1
 mugshot==0.4.2
@@ -70,5 +75,7 @@ unattended-upgrades==0.1
 urllib3==1.25.8
 virtualenv==20.24.5
 wadllib==1.3.3
+Werkzeug==3.0.1
 xcffib==0.8.1
 xkit==0.0.0
+zipp==3.17.0
